fixed contact spacing

--- a/styles.css
+++ b/styles.css
@@ -297,18 +297,19 @@ img.hover-shadow {
 
 
 #contact{
-    display:block;
-    padding-left: 40px;
-    padding-right: 40px;
+    display:flex;
+    padding: 0 40px;
     align-items: center;
     justify-content: center;
 }
 .contact_row{
     display: flex;
+    justify-content: space-between;
 }
 .contact_column{
     flex:1;
     text-align: center;
+    margin: 0 180px;
 }
 .contact_column a{
     text-decoration: underline;
